--- a/data/_data_versions.yaml
+++ b/data/_data_versions.yaml
@@ -26,4 +26,15 @@ spacecraft_velocity_inertial_frame: 1
 instrument_x_field_of_view: 1
 app_flip: 1
 
-#
+# binning
+spatial_bin_edges: 1
+spectral_bin_edges: 1
+
+# pixel_geometry
+latitude: 1
+longitude: 1
+tangent_altitude: 1
+solar_zenith_angle: 1
+emission_angle: 1
+phase_angle: 1
+local_time: 1
