Add API changes to the apsis datasets

--- a/data/_data_versions.yaml
+++ b/data/_data_versions.yaml
@@ -5,14 +5,14 @@ apsis_ephemeris_time: 1
 apsis_mars_year: 1
 apsis_solar_longitude: 1
 apsis_sol: 1
-apsis_sub_solar_latitude: 1
-apsis_sub_solar_longitude: 1
-apsis_sub_spacecraft_latitude: 1
-apsis_sub_spacecraft_longitude: 1
-apsis_sub_spacecraft_altitude: 1
-apsis_sub_spacecraft_local_time: 1
+apsis_subsolar_latitude: 1
+apsis_subsolar_longitude: 1
+apsis_subspacecraft_latitude: 1
+apsis_subspacecraft_longitude: 1
+apsis_subspacecraft_altitude: 1
+apsis_subspacecraft_local_time: 1
 apsis_mars_sun_distance: 1
-apsis_sub_solar_spacecraft_angle: 1
+apsis_subsolar_subspacecraft_angle: 1
 
 # binning
 spatial_bin_edges: 1
@@ -37,6 +37,9 @@ voltage: 1
 voltage_gain: 1
 
 # pixel_geometry
+pixel_vector: 1
+right_ascension: 1
+declination: 1
 latitude: 1
 longitude: 1
 tangent_altitude: 1
